Added touch events

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,6 +56,51 @@
                         <strong>JavaScript:</strong>
                         <pre>$('#example1').beforeafter();</pre>
                     </p>
+
+                    <h3>Options</h3>
+
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th>Option</th>
+                                <th>Type</th>
+                                <th>Default</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><code>touch</code></td>
+                                <td>Boolean</td>
+                                <td>true</td>
+                                <td>Enable or Disable touch events (for mobile).</td>
+                            </tr>
+                            <tr>
+                                <td><code>message</code></td>
+                                <td>String</td>
+                                <td>"Slide"</td>
+                                <td>Message to show in the middle of the divider.</td>
+                            </tr>
+                            <tr>
+                                <td><code>hide_message</code></td>
+                                <td>Boolean</td>
+                                <td>true</td>
+                                <td>Hides the message when mouse enters the area. Message will be shown again on reset.</td>
+                            </tr>
+                            <tr>
+                                <td><code>reset</code></td>
+                                <td>Boolean</td>
+                                <td>true</td>
+                                <td>Resets the divider to the middle when mouse leaves the area.</td>
+                            </tr>
+                            <tr>
+                                <td><code>reset_delay</code></td>
+                                <td>Integer</td>
+                                <td>3000</td>
+                                <td>Delay, in miliseconds before triggering the reset (if <code>reset</code> above is true)</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </section>
