--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
         <title>jQuery Before/After Plugin Demo</title>
 
         <link type="text/css" rel="stylesheet" media="all" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link type="text/css" rel="stylesheet" media="all" href="../dist/jquery.beforeafter.min.css">
         <link type="text/css" rel="stylesheet" media="all" href="../assets/css/demo.styles.css">
     </head>
     <body data-spy="scroll" data-offset="70" data-target="#navbar-example"data-offset="70" >
