--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <p>Like this:</p>
 
-<p><img src="assets/img/before_after.gif?raw=True" alt="Before/After"></p>
+<p><img src="http://i.imgur.com/wnUNkgp.gifv" alt="Before/After"></p>
 
 <h3>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h3>
@@ -111,6 +111,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
