--- a/index.html
+++ b/index.html
@@ -95,8 +95,32 @@
 <td>3000</td>
 <td>Delay, in miliseconds before triggering the reset (if reset above is true)</td>
 </tr>
+<tr>
+                                <td><code>drag_horizontal</code></td>
+                                <td>Boolean</td>
+                                <td>true</td>
+                                <td>If <code>true</code>, react to drag horizontally (left-right). Otherwise, react to drag vertically (top-bottom)</td>
+                            </tr>
+                            <tr>
+                                <td><code>split_horizontal</code></td>
+                                <td>Boolean</td>
+                                <td>true</td>
+                                <td>If <code>true</code>, split before and after to left and right. Otherwise top and bottom.</td>
+                            </tr>
 </tbody>
 </table>
+
+<h3>More examples</h3>
+
+<p>Vertical split and vertical drag:</p>
+
+<pre><code>    $('#example1').beforeafter({drag_horizontal: false, split_horizontal: false});
+</code></pre>
+
+<p>Horizontal split and vertical drag:</p>
+
+<pre><code>    $('#example1').beforeafter({drag_horizontal: false, split_horizontal: true});
+</code></pre>
 
 <h3>
 <a id="notes" class="anchor" href="#notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Notes</h3>
