--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 <td>Delay, in miliseconds before triggering the reset (if reset above is true)</td>
 </tr>
 <tr>
-                                <td><code>drag_horizontal</code></td>
+                                <td>drag_horizontal</td>
                                 <td>Boolean</td>
                                 <td>true</td>
                                 <td>If <code>true</code>, react to drag horizontally (left-right). Otherwise, react to drag vertically (top-bottom)</td>
                             </tr>
                             <tr>
-                                <td><code>split_horizontal</code></td>
+                                <td>split_horizontal</td>
                                 <td>Boolean</td>
                                 <td>true</td>
                                 <td>If <code>true</code>, split before and after to left and right. Otherwise top and bottom.</td>
